cmake_minimum_required(VERSION 3.14.0)
project(Emu68-tools VERSION 0.1.0)

include(cmake/common/setup_amiga_common.cmake)
get_verstring(VERSTRING)

message("HI1")
add_subdirectory(common)
message("HI2")
add_subdirectory(devicetree.resource)
message("HI3")
add_subdirectory(sdcard.device)
message("HI4")
add_subdirectory(VideoCore.card)
message("HI5")
add_subdirectory(68040.library)
message("HI6")
add_subdirectory(EmuControl)
message("HI7")
add_subdirectory(SmallPT)
message("HI8")
add_subdirectory(Buddhabrot)
message("HI9")
add_subdirectory(VC4Tweak)
message("HI10")
add_subdirectory(wifipi.device)
message("HI11")
add_subdirectory(emmc.device)
message("HI12")
add_subdirectory(i2c.library)
message("HI13")
add_subdirectory(lattice_i2c_prog)
message("HI14")
add_subdirectory(SetClockI2C)
message("HI15")

# Contribs
#add_subdirectory(Emu68Contribs/Emu68Info)
message("HI16")
#add_subdirectory(Emu68Contribs/ListDeviceTree)
message("HI17")
add_subdirectory(PcieTest)
message("HI18")